<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.galdiuz.manga.ImageViewerActivity">
    <item
        android:id="@+id/direction"
        android:title="@string/action_direction"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/favorite"
        android:title="@string/action_favorite_add"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/jump"
        android:title="@string/action_jump"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/reload"
        android:title="@string/action_reload"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/chapter_list"
        android:title="@string/action_chapter_list"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/prev_chapter"
        android:title="@string/action_prev_chapter"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/next_chapter"
        android:title="@string/action_next_chapter"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_preferences"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
